[workspace]
members = [
    "crates/telemetry-core",
    "crates/telemetry-ac",
    "crates/telemetry-lmu",
    "crates/session-store",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
nalgebra = "0.33"