[workspace]
members = [
    "crates/telemetry",
    "crates/session-store",
    "crates/models",
    "crates/identification",
    "crates/cli",
    "crates/viewer",
]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
nalgebra = "0.33"