[package]
name = "simracing-fit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simracing-fit"
path = "src/main.rs"

[dependencies]
telemetry = { path = "../telemetry" }
identification = { path = "../identification" }
session-store = { path = "../session-store" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", workspace = true, features = ["env-filter"]}
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"