[package]
name = "telemetry-ac"
version = "0.1.0"
edition = "2021"

[dependencies]
telemetry-core = { path = "../telemetry-core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
serde = { workspace = true }